--- a/src/main/resources/templates/tops.html
+++ b/src/main/resources/templates/tops.html
@@ -120,27 +120,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     &times;
                 </button>
                 <h4 class="modal-title" id="myModalLabel">
-                    消息
+                    甜蜜会员
                 </h4>
             </div>
             <div class="modal-body">
                 <!--主体内容-->
                 <form role="form" action="../message/add" method="post" id="Infofm">
-					<span th:each="q : ${qs}">
-						<!--<span th:text="${q.bmname}"></span>:-->
-                        <!--<p th:text="${q.context}" style="padding: 0px 0px 0px;color: #3a87ad"></p>-->
-                        <!--<p th:text="${q.ftime}" style="padding: 0px 0px 0px"></p>-->
+                    <img src="" style="width: 100px;height: 100px">
+					<!--<span th:each="q : ${qs}">
 						<div id="con"></div>
-                        <!--当前用户-->
+                        &lt;!&ndash;当前用户&ndash;&gt;
 						<input type="hidden" name="one" id="dqid">
-                        <!--回复的用户-->
+                        &lt;!&ndash;回复的用户&ndash;&gt;
 						<input type="hidden" name="tow" th:value="${q.dmid}" id="hfid">
 					</span>
                     <div class="form-group">
-                        <!--<label for="modPhone">内容</label>-->
                         <textarea name="context" maxlength="100" id="context" placeholder="请输入你要回复的内容" style="width: 563px;height: 100px"></textarea>
-                    </div>
-                    <!--<button type="submit" class="btn btn-default">发送</button>-->
+                    </div>-->
                 </form>
             </div>
             <div class="modal-footer">
