--- a/src/main/resources/templates/tops.html
+++ b/src/main/resources/templates/tops.html
@@ -101,18 +101,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <p style="margin-top: 25px;margin-left: 50px;color: #8a6d3b;font-size: 20px;" th:text="${t.tname}"></p><br>
                 <!--<p style="font-size: 40px;margin-left: 50px;color: #8a6d3b;display: inline-block" th:text="${t.days}"></p><span style="color: #8a6d3b;font-size: 40px">元/天</span><br>-->
                 <span style="margin-left: 50px;color: #8a6d3b;">超值会员价</span><p style="font-size: 35px;display: inline-block;color: #8a6d3b" th:text="${t.price}"></p><span style="color: #8a6d3b">元</span><br><br>
-                <h2><a href="#"><span class="label label-warning" style="margin-left: 70px;color: #8a6d3b; background: yellow;width:120px;">立即开通</span></a></h2>
+                <h2><a data-toggle="modal" href="#kaitong"><span class="label label-warning" style="margin-left: 70px;color: #8a6d3b; background: yellow;width:120px;">立即开通</span></a></h2>
             </div>
             </span>
             <p style="margin-left: 60px;margin-top: 60px;color: yellow;font-size: 20px">-------------------------------------------------------------------------------&nbsp;&nbsp;置顶尊享特权&nbsp;&nbsp;-----------------------------------------------------------------------</p><br><br><br>
             <span style="margin-left: 70px;margin-top:50px" >优先排序在最前</span><span style="margin-left:120px;margin-top:50px">吸引更多的关注，增加相亲成功概率</span><span style="margin-left: 120px;margin-top:50px">让您飞速脱单</span><span style="margin-left: 120px;margin-top:50px">更多精准筛选条件</span><br><br><br><br><br>
-            <h1><a href="#"><span class="label label-warning" style="margin-left: 420px;color: #8a6d3b; background: yellow;width:120px;">立即开通&nbsp;&nbsp;60元/30天</span></a></h1>
+            <h1><a data-toggle="modal" href="#kaitong"><span class="label label-warning" style="margin-left: 420px;color: #8a6d3b; background: yellow;width:120px;">立即开通&nbsp;&nbsp;60元/30天</span></a></h1>
         </div>
 
     </div>
 </div>
 <!--模态框-->
-<div class="modal fade" id="Infos" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="kaitong" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -120,13 +120,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     &times;
                 </button>
                 <h4 class="modal-title" id="myModalLabel">
-                    甜蜜会员
+                    开通置顶
                 </h4>
             </div>
             <div class="modal-body">
                 <!--主体内容-->
-                <form role="form" action="../message/add" method="post" id="Infofm">
-                    <img src="" style="width: 100px;height: 100px">
+                <form role="form" action="" method="post" id="Infofm">
+                    <img src="../images/myzfb.jpg" style="width: 100px;height: 100px;">
+
 					<!--<span th:each="q : ${qs}">
 						<div id="con"></div>
                         &lt;!&ndash;当前用户&ndash;&gt;
@@ -140,8 +141,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-success" data-dismiss="modal" onclick="reply()">回复</button>
+                <!--<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>-->
+                <button type="button" class="btn btn-success" data-dismiss="modal" onclick="reply()">前往支付</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
