--- a/src/main/resources/templates/SendXQ.html
+++ b/src/main/resources/templates/SendXQ.html
@@ -62,10 +62,10 @@
                 },);
             //恢复为异步
             $.ajaxSettings.async = true;
-            let col="<table class=\"table\"><caption style=\"font-weight: bold;font-size: 24px\">回帖区</caption>";
+            let col="<table class=\"table\" style='margin-left: 90px;width: 1170px;margin-top: 10px;'><caption style=\"font-weight: bold;font-size: 24px;background: yellow\">回帖区</caption>";
             for (let i=0;i<f.length;i++){
                 let row=f[i];
-                let drow='<div><tr><td>用户名:'+row.bmname+'</td></tr><tr><td style="font-size: 16px">&nbsp;&nbsp;&nbsp;&nbsp;'+row.context+'</td></tr><tr><td style="text-align:right">'+transferTime(row.commention)+'</td></tr><tr><td><hr></td></tr></div>';
+                let drow='<div><tr><td style="font-weight: bold">用户名:'+row.bmname+'</td></tr><tr><td style="font-size: 16px;font-weight: bold">&nbsp;&nbsp;&nbsp;&nbsp;'+row.context+'</td></tr><tr><td style="text-align:right;font-weight: bold">'+transferTime(row.commention)+'</td></tr><tr><td><hr></td></tr></div>';
                 col=col+drow;
 
             }
@@ -161,17 +161,18 @@
     <li><a href="#">交友论坛</a></li>
     <li class="active">评论区</li>
 </ul>-->
-<div class="container">
-    <div class="row text-center h3" th:text="${send.title}"></div>
+<div class="row text-center h2" th:text="${send.title}" style="margin-bottom: 20px;color: #0e90d2;font-weight: bold"></div>
+<div class="container" style="background: plum">
     <div class="row h5" style="font-size: 16px">
         <input type="hidden" id="sid" th:value="${send.spid}">
-        发帖人:<span th:text="${send.bmname}"></span><br>
-        回帖数:<span th:text="${send.comcount}"></span><br>
-        发帖时间:<span th:text="${send.sendtime}"></span>
+        &nbsp;发帖人:&nbsp;<span th:text="${send.bmname}" style="font-weight: bold"></span><br><br/>
+        &nbsp;回帖数:&nbsp;<span th:text="${send.comcount}" style="font-weight: bold"></span><br><br/>
+        &nbsp;发帖时间:&nbsp;<span th:text="${send.sendtime}" style="font-weight: bold"></span>
     </div>
     <br>
+    内容:
     <div class="row h5" style="font-size: 20px">
-        &nbsp; &nbsp; &nbsp; &nbsp;<span th:text="${send.context}"></span>
+        &nbsp; &nbsp; &nbsp; &nbsp;<span th:text="${send.context}" style="font-weight: bold"></span>
     </div>
     <br><br>
 </div>
@@ -182,7 +183,7 @@
 </div>
 <!---写评论------>
 <div class="form-group">
-    <label for="pl">内心独白</label>
+    <label for="pl">回复独白</label>
     <!--<input type="text" name="soliloquy" th:value="${Dlist.soliloquy}" class="form-control" id="soliloquy" style="width: 300px">-->
     <textarea class="form-control" id="pl" style="height: 100px; color: black!important" placeholder="写下您的评论...."></textarea>
     <div align="right"><input id="fs" type="button" class="btn btn-success" value="发送"></div>
