--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -181,7 +181,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--主体内容-->
 				<form role="form" action="../message/add" method="post" id="messagefm">
 					<!--发送的用户-->
-					<input type="hidden" name="tow" th:value="${l.dmid}" id="fsid">
+					<input type="hidden" name="one" th:value="${l.dmid}" id="fsid">
 					<div class="form-group">
 						<textarea name="context" maxlength="100" id="context" placeholder="请输入你要发送的内容" style="width: 563px;height: 100px"></textarea>
 					</div>
