--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- header -->
 		<div class="header-inner">
 			<h1 class="logo">
-				<a href="index.html">甜蜜<span>Sweet</span></a></h1>
+				<a href="../basic_message/listAll">甜蜜<span>Sweet</span></a></h1>
 			<nav class="navbar navbar-default">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -158,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<form action="#" method="post">
 					<img src="../images/zwdl.png" id="zp" style="height: 140px;width: 140px;"><br><br>
 					<span style="color: white;" id="spnc">昵称:</span><p id="nc" style="color: white;display: inline-block"></p><br><br>
-					<span style="color: white;" id="spid">ID:</span><p id="num" style="color: white;display: inline-block"></p><br><br>
+					<span style="color: white;" id="spid">ID:</span><p id="num" style="color: white;display: inline-block"></p><img src="../images/novip.png" id="isvip"><br><br>
 					<a href="../basic_message/GeRen" >完善资料</a>&nbsp;&nbsp;&nbsp;
 					<a href="../basic_message/tologin" id="lujing" >预览</a>
 				</form>
@@ -196,28 +196,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="test" id="clients">
 	<div class="container">
 		<div class="tittle-agileinfo">
-			<h3 class="white-w3ls">成功结婚</h3>
+			<h3 class="white-w3ls">快乐夫妇</h3>
 		</div>
 		<div class="test-gri1">
 			<div id="owl-demo2" class="owl-carousel">
 				<div class="test-grid1">
-					<img src="../images/t1.jpg" alt="" class="img-r">
+					<img src="../images/ss1.jpg" alt="" class="img-r">
 					<h4>欣然 & Grant</h4>
 					<span>感慨</span>
 					<p>谋事在人，成事在天</p>
 				</div>
 				<div class="agile">
 					<div class="test-grid1">
-						<img src="../images/t2.jpg" alt="" class="img-r">
-						<h4>康康 & 公主晚安</h4>
+						<img src="../images/ss2.jpg" alt="" class="img-r">
+						<h4>李康 & 孙丽丽</h4>
 						<span>感慨</span>
 						<p>珍惜缘分，爱你一生！</p>
 					</div>
 				</div>
 				<div class="agile">
 					<div class="test-grid1">
-						<img src="../images/t3.jpg" alt="" class="img-r">
-						<h4>娇娇妹 & Mondler</h4>
+						<img src="../images/ss4.jpg" alt="" class="img-r">
+						<h4>王凯 & 娇娇妹</h4>
 						<span>感慨</span>
 						<p>缘分，有时就是分分钟</p>
 					</div>
@@ -236,11 +236,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<ul id="flexiselDemo1">
 		<li>
 			<div class="wthree_gallery_grid">
-				<a href="../images/g1.jpg" class="lsb-preview" data-lsb-group="header">
+				<a href="../images/ss1.jpg" class="lsb-preview" data-lsb-group="header">
 					<div class="view second-effect">
-						<img src="../images/g1.jpg" alt="" class="img-responsive" />
+						<img src="../images/ss1.jpg" alt="" class="img-responsive" />
 						<div class="mask">
-							<p>Bonnie <i class="fa fa-heart-o" aria-hidden="true"></i> Clyde</p>
+							<p>欣然 <i class="fa fa-heart-o" aria-hidden="true"></i> Grant</p>
 						</div>
 					</div>
 				</a>
@@ -248,11 +248,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</li>
 		<li>
 			<div class="wthree_gallery_grid">
-				<a href="../images/g2.jpg" class="lsb-preview" data-lsb-group="header">
+				<a href="../images/ss2.jpg" class="lsb-preview" data-lsb-group="header">
 					<div class="view second-effect">
-						<img src="../images/g2.jpg" alt="" class="img-responsive" />
+						<img src="../images/ss2.jpg" alt="" class="img-responsive" />
 						<div class="mask">
-							<p>Abelards <i class="fa fa-heart-o" aria-hidden="true"></i> Heloise</p>
+							<p>李康 <i class="fa fa-heart-o" aria-hidden="true"></i> 孙丽丽</p>
 						</div>
 					</div>
 				</a>
@@ -260,11 +260,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</li>
 		<li>
 			<div class="wthree_gallery_grid">
-				<a href="../images/g3.jpg" class="lsb-preview" data-lsb-group="header">
+				<a href="../images/ss4.jpg" class="lsb-preview" data-lsb-group="header">
 					<div class="view second-effect">
-						<img src="../images/g3.jpg" alt="" class="img-responsive" />
+						<img src="../images/ss4.jpg" alt="" class="img-responsive" />
 						<div class="mask">
-							<p>Henry <i class="fa fa-heart-o" aria-hidden="true"></i> Clare</p>
+							<p>王凯 <i class="fa fa-heart-o" aria-hidden="true"></i> 娇娇妹</p>
 						</div>
 					</div>
 				</a>
@@ -276,7 +276,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="view second-effect">
 						<img src="../images/g4.jpg" alt="" class="img-responsive" />
 						<div class="mask">
-							<p>Jack <i class="fa fa-heart-o" aria-hidden="true"></i> Sally</p>
+							<p>王强 <i class="fa fa-heart-o" aria-hidden="true"></i> 李梨</p>
 						</div>
 					</div>
 				</a>
@@ -284,11 +284,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</li>
 		<li>
 			<div class="wthree_gallery_grid">
-				<a href="../images/g5.jpg" class="lsb-preview" data-lsb-group="header">
+				<a href="../images/ss6.jpg" class="lsb-preview" data-lsb-group="header">
 					<div class="view second-effect">
-						<img src="../images/g5.jpg" alt="" class="img-responsive" />
+						<img src="../images/ss6.jpg" alt="" class="img-responsive" />
 						<div class="mask">
-							<p>Henry <i class="fa fa-heart-o" aria-hidden="true"></i> Clare</p>
+							<p>马明明 <i class="fa fa-heart-o" aria-hidden="true"></i> 张诺</p>
 						</div>
 					</div>
 				</a>
@@ -386,6 +386,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				}
 			}
 		});
+		//获取当前登陆人id
 		function GetCookie(name) {
 			var ck = document.cookie;
 			var exp1 = new RegExp(name + "=.*?(?=;|$)");
@@ -394,11 +395,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		}
 		let d=GetCookie("bmid");
 		if(d!=null){
+			//我的资料
 			$.ajax({
 				url:"../Details_message/ajid",
 				type: "post",
 				data:{bmid:d},
 				success:function (data) {
+					//获取会员状态
+					let svip = data["VIP"];
+					//如果是会员
+					if(svip==0){
+						//设置会员图标
+						$("#isvip").attr("src","../images/SVIP.png");
+					}
 					let p=data["pic"];
 					console.log("p:"+p);
 					let n=data["bmname"];
