--- a/src/main/resources/templates/pinglun.html
+++ b/src/main/resources/templates/pinglun.html
@@ -104,9 +104,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th style="text-align: center">标题</th>
-                        <th style="text-align: center">时间</th>
-                        <th style="text-align: center">查看</th>
+                        <th style="text-align: center;font-weight: bold;font-size: 18px">标题</th>
+                        <th style="text-align: center;font-weight: bold;font-size: 18px">时间</th>
+                        <th style="text-align: center;font-weight: bold;fon-size: 18px">查看</th>
                     </tr>
                 </thead>
                 <tbody>
