--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -81,7 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="container">
 		<div class="w3l_agileits_breadcrumbs_inner">
 			<ul>
-				<li><a href="index.html">Home</a><span>&#187;</span></li>
+				<li><a href="../basic_message/listAll">主页</a><span>&#187;</span></li>
 									
 				<li>详情</li>
 				</ul>
@@ -93,8 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="matches elite-app">
 		<div class="container">
 		<div class="tittle-agileinfo">
-			<h3 th:text="${l.truename}"></h3>
-			<!--<a href="../basic_message/findAllByIdt">举报此人</a>--><!--<a th:href="@{'../basic_message/findAllByIdt?bmid='+${l.bmid}}">举报此人</a>-->
+			<h3 th:text="${l.truename}" style="display: inline-block;margin-left: 500px;"></h3><img src="../images/SVIP2.jpg" style="width: 20px;height: 20px;">
 		</div>
 		<div class="matches-main-agileinfo">
 			<div>
