--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -49,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- navbar-header -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html" class="active">首页</a></li>
+						<li><a href="../basic_message/listAll" class="active">首页</a></li>
 						<li><a href="../basic_message/zhaoboy">找男友</a></li>
 						<li><a href="../basic_message/zhaogirl">找女友</a></li>
 						<li class="dropdown menu__item">
@@ -80,7 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="container">
 		<div class="w3l_agileits_breadcrumbs_inner">
 			<ul>
-				<li><a href="index.html">主页</a><span>&#187;</span></li>
+				<li><a href="../basic_message/listAll">主页</a><span>&#187;</span></li>
 									
 				<li>举报</li>
 				</ul>
