--- a/src/main/resources/templates/seek.html
+++ b/src/main/resources/templates/seek.html
@@ -34,7 +34,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- header -->
         <div class="header-inner">
             <h1 class="logo">
-                <a href="index.html">甜蜜<span>Sweet</span></a></h1>
+                <a href="../basic_message/listAll">甜蜜<span>Sweet</span></a></h1>
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -94,34 +94,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="tittle-agileinfo">
             <h3>搜索意中人</h3>
         </div>
-        <div style="width: 1090px;height: 200px;background: #fff3cd;margin-bottom: 30px">
+        <div style="width: 1090px;height: 200px;background: black;margin-bottom: 30px">
             <form action="../attention/mhncid2" method="post" style="margin-bottom: 20px;">
-                意中人:<input type="text" name="params"  placeholder="请输入ID或昵称精准搜索" style="width: 380px;margin-top: 40px">
-                <input type="submit" value="搜索" class="btn btn-info" style="width: 85px;height: 30px">
+                <span style="color: white;font-weight: bold">意中人:</span><input type="text" name="params"  placeholder="请输入ID或昵称精准搜索" style="width: 380px;margin-top: 40px;border: outset;">
+                <input type="submit" value="搜索" class="btn btn-info" style="width: 85px;height: 30px;">
             </form>
             <hr/>
             <form action="../attention/much" method="post">
                 <!--下拉框-->
-                条件搜索:<select style="width: 120px;" name="height">
+                <span style="color: white;font-weight: bold">条件搜索</span>:<select style="width: 120px;border: outset" name="height">
                             <option value="1" >身高不限</option>
                             <option value=150>150cm-160cm</option>
                             <option value=160>161cm-170cm</option>
                             <option value=170>171cm-180cm</option>
                             <option value=180>180以上</option>
                         </select>
-                        <select style="width: 120px;" name="sex">
+                        <select style="width: 120px;border: outset" name="sex">
                             <option value=2>性别不限</option>
                             <option value=1>男</option>
                             <option value=0>女</option>
                         </select>
-                        <select style="width: 120px;" name="education">
+                        <select style="width: 120px;border: outset" name="education">
                             <option value="随便">学历不限</option>
                             <option value="初中">初中</option>
                             <option value="高中">高中</option>
                             <option value="专科">专科</option>
                             <option value="本科">本科</option>
                         </select>
-                        <select style="width: 120px;" name="monthly">
+                        <select style="width: 120px;border: outset" name="monthly">
                             <option value=4>月收入不限</option>
                             <option value=2000>4000以下</option>
                             <option value=4000>4000-6000</option>
@@ -129,7 +129,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <option value=8000>8001-10000</option>
                             <option value=10000>10000以上</option>
                         </select>
-                        <select style="width: 120px;" name="marriage">
+                        <select style="width: 120px;border: outset" name="marriage">
                             <option value=5>婚姻状况不限</option>
                             <option value=0>离婚</option>
                             <option value=1>未婚</option>
